--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script scr="./task-3.js"></script>
     <script scr="./task-2.js"></script>
     <script scr="./task-1.js"></script>
-    <script scr="./js"></script>
+    <script scr="./goit-js-hw-01"></script>
     
 </body>
 </html>
