--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <script scr="./task-3.js"></script>
-    <script scr="./task-2.js"></script>
-    <script scr="./task-1.js"></script>
+    <script scr="./goit-js-hw-01/task-3.js"></script>
+    <script scr="./goit-js-hw-01/task-2.js"></script>
+    <script scr="./goit-js-hw-01/task-3.js"></script>
     <script scr="./goit-js-hw-01"></script>
     
 </body>
