--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <script scr="./goit-js-hw-01/task-3.js"></script>
-    <script scr="./goit-js-hw-01/task-2.js"></script>
-    <script scr="./goit-js-hw-01/task-3.js"></script>
-    <script scr="./goit-js-hw-01/js"></script>
+    <script scr="./js/task-1.js"></script>
+    <script scr="./js/task-2.js"></script>
+    <script scr="./js/task-3.js"></script>
+    <script scr="./js"></script>
     
 </body>
 </html>
