--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Hello</title>
 </head>
 <body>
     <script scr="./js/task-1.js"></script>
     <script scr="./js/task-2.js"></script>
     <script scr="./js/task-3.js"></script>
-    
+    <script scr="./js"></script>
 </body>
 </html>
