--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-    type="module"
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello</title>
+    <meta name="viewport" 
+    content="width=device-width, initial-scale=1.0"
+    />
+    <title>JS-tutor</title>
 </head>
 <body>
-    <script scr="./js/task-1.js"></script>
-    <script scr="./js/task-2.js"></script>
-    <script scr="./js/task-3.js"></script>
+    <script type="module" scr="./js/task-1.js"></script>
+    <script type="module" scr="./js/task-2.js"></script>
+    <script type="module" scr="./js/task-3.js"></script>
 </body>
 </html>
