--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>JS-tutor</title>
 </head>
 <body>
-    <script type="module" scr="./js/task-1.js"></script>
-    <script type="module" scr="./js/task-2.js"></script>
-    <script type="module" scr="./js/task-3.js"></script>
+    <script type="module" src="./js/task-1.js"></script>
+    <script type="module" src="./js/task-2.js"></script>
+    <script type="module" src="./js/task-3.js"></script>
 </body>
 </html>
